// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeoContentComponent should align the image to left 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="body"
    >
      <picture
        class="body-picture body-picture--left"
      >
        <img
          alt="Property Finder logo"
          class="body-picture-img"
          src="https://www.propertyfinder.ae/dist/common/assets/favicon/favicon-32x32.png"
        />
      </picture>
      <div
        class="body-html"
      >
        <p>
          This is an html paragraph
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SeoContentComponent should render the component with all the props 1`] = `
<div>
  <div
    class="container"
  >
    <h2
      class="heading"
    >
      This is h2 heading
    </h2>
    <div
      class="body"
    >
      <picture
        class="body-picture body-picture--right"
      >
        <img
          alt="Property Finder logo"
          class="body-picture-img"
          src="https://www.propertyfinder.ae/dist/common/assets/favicon/favicon-32x32.png"
        />
      </picture>
      <div
        class="body-html"
      >
        <p>
          This is an html paragraph
        </p>
      </div>
    </div>
  </div>
</div>
`;
